--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Tecture Component Library Publisher
-        uses: tecture-io/component-library-publisher-action
+        uses: tecture-io/component-library-publisher-action@v1
         with:
           milliseconds: '1000'
