Update GCP collection

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,5 @@ jobs:
         uses: tecture-io/component-library-publisher-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          database_key: ${{ secrets.DATABASE_KEY }}
+          server_url: ${{ secrets.SERVER_URL }}
+          api_key: ${{ secrets.API_KEY }}
