--- a/.github/workflows/publisher_prod.yml
+++ b/.github/workflows/publisher_prod.yml
@@ -18,4 +18,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           server_url: ${{ secrets.SERVER_URL_PROD }}
-          api_key: ${{ secrets.API_KEY_PROD }}
+          auth_url: ${{ secrets.AUTH_URL }}
+          client_id: ${{ secrets.CLIENT_ID }}
+          client_secret: ${{ secrets.CLIENT_SECRET }}
+          audience: ${{ secrets.AUDIENCE }}
